--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/index.js",
   "scripts": {
     "build": "webpack --config webpack.prod.js",
-    "start": "webpack serve --open --config webpack.dev.js"
+    "start": "webpack serve --open --config webpack.dev.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -19,8 +20,8 @@
   "homepage": "https://github.com/y-scope/yscope-log-viewer#readme",
   "dependencies": {
     "@monaco-editor/react": "^4.4.6",
-    "buffer": "^6.0.3",
     "bootstrap": "^5.2.3",
+    "buffer": "^6.0.3",
     "compression-webpack-plugin": "^10.0.0",
     "crypto-browserify": "^3.12.0",
     "css-unicode-loader": "^1.0.3",
@@ -30,9 +31,9 @@
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.10.2",
+    "react-dom": "^18.2.0",
     "react-loading-icons": "^1.1.0",
     "react-monaco-editor": "^0.50.1",
     "react-router-dom": "^6.4.3",
@@ -50,6 +51,7 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "file-loader": "^6.2.0",
+    "jest": "^29.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
