--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "crypto-browserify": "^3.12.0",
     "css-unicode-loader": "^1.0.3",
     "html-webpack-plugin": "^5.5.0",
+    "monaco-editor": "^0.34.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "path": "^0.12.7",
     "process": "^0.11.10",
