--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "path": "^0.12.7",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
+    "re-resizable": "^6.9.9",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-bootstrap-icons": "^1.10.2",
