Add support to open various file formats in addition to CLP IRStream

--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
   "homepage": "https://github.com/y-scope/yscope-log-viewer#readme",
   "dependencies": {
     "@monaco-editor/react": "^4.4.6",
+    "@obsidize/tar-browserify": "4.0.0",
     "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
     "compression-webpack-plugin": "^10.0.0",
     "crypto-browserify": "^3.12.0",
     "css-unicode-loader": "^1.0.3",
     "html-webpack-plugin": "^5.5.0",
+    "jszip": "^3.10.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
+    "pako": "^2.1.0",
     "path": "^0.12.7",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
