--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "homepage": "https://github.com/y-scope/yscope-log-viewer#readme",
   "dependencies": {
-    "monaco-editor-webpack-plugin": "^7.1.0",
     "@obsidize/tar-browserify": "4.0.0",
     "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
@@ -28,6 +27,7 @@
     "css-unicode-loader": "^1.0.3",
     "html-webpack-plugin": "^5.5.0",
     "jszip": "^3.10.1",
+    "monaco-editor-webpack-plugin": "^7.1.0",
     "pako": "^2.1.0",
     "path": "^0.12.7",
     "process": "^0.11.10",
@@ -47,7 +47,7 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.1",
-    "eslint": "8.22.0",
+    "eslint": "^8.22.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-simple-import-sort": "^10.0.0",
