--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.1",
-    "eslint": "^8.22.0",
+    "eslint": "8.22.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-simple-import-sort": "^10.0.0",
