--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   },
   "homepage": "https://github.com/y-scope/yscope-log-viewer#readme",
   "dependencies": {
-    "@monaco-editor/react": "^4.4.6",
     "@obsidize/tar-browserify": "4.0.0",
     "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
@@ -28,7 +27,8 @@
     "css-unicode-loader": "^1.0.3",
     "html-webpack-plugin": "^5.5.0",
     "jszip": "^3.10.1",
-    "monaco-editor-webpack-plugin": "^7.0.1",
+    "monaco-editor": "^0.45.0",
+    "monaco-editor-webpack-plugin": "^7.1.0",
     "pako": "^2.1.0",
     "path": "^0.12.7",
     "process": "^0.11.10",
@@ -38,7 +38,6 @@
     "react-bootstrap-icons": "^1.10.2",
     "react-dom": "^18.2.0",
     "react-loading-icons": "^1.1.0",
-    "react-monaco-editor": "^0.50.1",
     "react-router-dom": "^6.4.3",
     "stream-browserify": "^3.0.0",
     "zstd-codec": "file:customized-packages/zstd-codec/js/"
