--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/y-scope/yscope-log-viewer#readme",
   "dependencies": {
+    "axios": "^1.6.7",
     "@obsidize/tar-browserify": "4.0.0",
     "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
