--- a/package.json
+++ b/package.json
@@ -48,10 +48,7 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.0",
     "css-loader": "^6.7.1",
-    "eslint": "8.22.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.31.11",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-config-yscope": "^0.0.5",
     "file-loader": "^6.2.0",
     "jest": "^29.5.0",
     "mini-css-extract-plugin": "^2.6.1",
@@ -66,5 +63,10 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
     "webpack-merge": "^5.8.0"
-  }
+  },
+   "eslintConfig": {
+    "extends": [
+      "yscope/react"
+    ]
+   }
 }
