--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --config webpack.prod.js",
     "start": "webpack serve --open --config webpack.dev.js",
     "test": "jest",
-    "analyze:size": "npx webpack --config webpack.prod.js --profile --json > bundle_stats.json && npx webpack-bundle-analyzer bundle_stats.json dist/"
+    "analyze:size": "npx webpack --config webpack.prod.js --profile --json=bundle_stats.json && npx webpack-bundle-analyzer bundle_stats.json dist/"
   },
   "repository": {
     "type": "git",
