Remove worker-loader and refactor worker import.

--- a/new-log-viewer/tsconfig.json
+++ b/new-log-viewer/tsconfig.json
@@ -39,7 +39,7 @@
     // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
 
     /* Modules */
-    "module": "NodeNext",
+    "module": "ESNext",
     /* Specify what module code is generated. */
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     "moduleResolution": "NodeNext",
