--- a/new-log-viewer/package.json
+++ b/new-log-viewer/package.json
@@ -43,8 +43,7 @@
     "webpack": "^5.92.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
-    "webpack-merge": "^5.10.0",
-    "worker-loader": "^3.0.8"
+    "webpack-merge": "^5.10.0"
   },
   "eslintConfig": {
     "root": true,
