--- a/new-log-viewer/package.json
+++ b/new-log-viewer/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/y-scope/yscope-log-viewer#readme",
   "dependencies": {
+    "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
