--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -27,4 +27,4 @@ jobs:
 
       - name: "Run lint task"
         shell: "bash"
-        run: "task lint:check"
+        run: "npm --prefix new-log-viewer/ run lint:check"
