--- a/new-log-viewer/package.json
+++ b/new-log-viewer/package.json
@@ -5,8 +5,8 @@
   "main": "src/index.tsx",
   "scripts": {
     "build": "webpack --config webpack.prod.js",
-    "lint:check": "npx eslint --no-eslintrc --config package.json ./src",
-    "lint:fix": "npx eslint --fix --no-eslintrc --config package.json ./src",
+    "lint:check": "npx eslint --format github --no-eslintrc --config package.json ./src",
+    "lint:fix": "npx eslint --format github --fix --no-eslintrc --config package.json ./src",
     "start": "webpack serve --open --config webpack.dev.js"
   },
   "repository": {
@@ -38,6 +38,7 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
     "eslint-config-yscope": "latest",
+    "eslint-formatter-github": "^1.1.4",
     "eslint-import-resolver-typescript": "^3.6.1",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.0",
