--- a/new-log-viewer/package.json
+++ b/new-log-viewer/package.json
@@ -29,6 +29,7 @@
     "@babel/preset-env": "^7.24.7",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@eslint/js": "^9.9.1",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
@@ -36,14 +37,18 @@
     "@typescript-eslint/parser": "^7.13.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
+    "eslint": "^8.57.0",
     "eslint-config-yscope": "latest",
     "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-react": "^7.35.0",
+    "globals": "^15.9.0",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "react-refresh": "^0.14.2",
     "style-loader": "^4.0.0",
     "typescript": "^5.4.5",
+    "typescript-eslint": "^8.3.0",
     "webpack": "^5.92.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
