--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -26,6 +26,7 @@ jobs:
           node-version: 22
       - run: "npm --prefix new-log-viewer/ clean-install"
       - run: "npm --prefix new-log-viewer/ run lint:ci"
+        continue-on-error: true
       - uses: "ataylorme/eslint-annotate-action@v3"
         with:
           fail-on-error: true
