--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -12,6 +12,8 @@ on:
 permissions:
   # So the workflow can cancel in-progress jobs
   actions: "write"
+  # So `eslint-annotate-action` can compare commits
+  contents: "read"
 
 concurrency:
   group: "${{github.workflow}}-${{github.ref}}"
