Move 'checks: "write"' and 'contents: "read"' permissions to the job level to localize permissions and enhance security.

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -12,10 +12,6 @@ on:
 permissions:
   # So the workflow can cancel in-progress jobs
   actions: "write"
-  # So `eslint-annotate-action` can create / update status checks
-  checks: "write"
-  # So `eslint-annotate-action` can get pull request files
-  contents: "read"
 
 concurrency:
   group: "${{github.workflow}}-${{github.ref}}"
@@ -25,6 +21,11 @@ concurrency:
 jobs:
   lint-check:
     runs-on: "ubuntu-latest"
+    permissions:
+      # So `eslint-annotate-action` can create / update status checks
+      checks: "write"
+      # So `eslint-annotate-action` can get pull request files
+      contents: "read"
     steps:
       - uses: "actions/checkout@v4"
         with:
