--- a/new-log-viewer/package.json
+++ b/new-log-viewer/package.json
@@ -46,8 +46,13 @@
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
+    "prettier": "^3.3.3",
     "react-refresh": "^0.14.2",
     "style-loader": "^4.0.0",
+    "stylelint": "^16.9.0",
+    "stylelint-config-clean-order": "^6.1.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-prettier": "^5.0.2",
     "typescript": "^5.4.5",
     "webpack": "^5.92.0",
     "webpack-cli": "^5.1.4",
