--- a/new-log-viewer/package.json
+++ b/new-log-viewer/package.json
@@ -5,11 +5,17 @@
   "main": "src/index.tsx",
   "scripts": {
     "build": "webpack --config webpack.prod.js",
-    "lint": "npm run lint:check",
-    "lint:ci": "npm run lint:check -- --output-file eslint-report.json --format json",
-    "lint:check": "eslint src webpack.*.js",
-    "lint:fix": "npm run lint:check -- --fix",
-    "start": "webpack serve --open --config webpack.dev.js"
+    "start": "webpack serve --open --config webpack.dev.js",
+
+    "lint": "npm-run-all --sequential --continue-on-error lint:css-check lint:js-check",
+    "lint:ci": "npm-run-all --sequential --continue-on-error lint:css-check lint:js-ci",
+    "lint:fix": "npm-run-all --sequential --continue-on-error lint:css-fix lint:js-fix",
+
+    "lint:css-check": "stylelint src/**/*.css",
+    "lint:css-fix": "npm run lint:css-check -- --fix",
+    "lint:js-check": "eslint src webpack.*.js",
+    "lint:js-ci": "npm run lint:js-check -- --output-file eslint-report.json --format json",
+    "lint:js-fix": "npm run lint:js-check -- --fix"
   },
   "repository": {
     "type": "git",
@@ -46,6 +52,7 @@
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.9.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^3.3.3",
     "react-refresh": "^0.14.2",
     "style-loader": "^4.0.0",
