Add back `continue-on-error` on "npm --prefix new-log-viewer/ run lint:css-check".

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -39,6 +39,7 @@ jobs:
       - name: Register Stylelint problem matcher
         run: echo "::add-matcher::./.github/problem-matchers/stylelint.json"
       - run: "npm --prefix new-log-viewer/ run lint:css-check"
+        continue-on-error: false
       - name: Remove Stylelint problem matcher
         run: echo "::remove-matcher owner=stylelint::"
 
