--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Register Stylelint problem matcher
         run: echo "::add-matcher::./.github/problem-matchers/stylelint.json"
       - run: "npm --prefix new-log-viewer/ run lint:css-check"
-        continue-on-error: false
+        continue-on-error: true
       - name: Remove Stylelint problem matcher
         run: echo "::remove-matcher owner=stylelint::"
 
