Wrap names with quotes.

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -35,11 +35,11 @@ jobs:
           node-version: 22
       - run: "npm --prefix new-log-viewer/ clean-install"
 
-      - name: Register Stylelint problem matcher
+      - name: "Register Stylelint problem matcher"
         run: "echo '::add-matcher::./.github/problem-matchers/stylelint.json'"
       - run: "npm run lint:css-check"
         working-directory: "./new-log-viewer/"
-      - name: Remove Stylelint problem matcher
+      - name: "Remove Stylelint problem matcher"
         if: "always()"
         run: "echo '::remove-matcher owner=stylelint::'"
 
