Replace single quote with double for sed.

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -38,7 +38,7 @@ jobs:
       - name: "Register Stylelint problem matcher"
         run: "echo '::add-matcher::./.github/problem-matchers/stylelint.json'"
       # TODO: remove below `sed` hack once the new-log-viewer sources are moved to the project's root.
-      - run: "npm --prefix new-log-viewer/ run lint:css-check | sed 's#src/#new-log-viewer/src/#g'"
+      - run: "npm --prefix new-log-viewer/ run lint:css-check | sed \"s#src/#new-log-viewer/src/#g\""
       - name: "Remove Stylelint problem matcher"
         if: "always()"
         run: "echo '::remove-matcher owner=stylelint::'"
