--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -35,15 +35,7 @@ jobs:
           node-version: 22
       - run: "npm --prefix new-log-viewer/ clean-install"
 
-      - name: "Register Stylelint problem matcher"
-        run: "echo '::add-matcher::./.github/problem-matchers/stylelint.json'"
-      # TODO: remove below `sed` hack once the new-log-viewer sources are moved to the project's root.
-      - run: |
-          npm --prefix new-log-viewer/ run lint:css-ci 2>&1 | sed 's#src/#new-log-viewer/src/#g'
-          exit ${PIPESTATUS[0]}
-      - name: "Remove Stylelint problem matcher"
-        if: "always()"
-        run: "echo '::remove-matcher owner=stylelint::'"
+      - run: npm --prefix new-log-viewer/ run lint:css-ci
 
       - run: "npm --prefix new-log-viewer/ run lint:js-ci"
         if: "always()"
