--- a/new-log-viewer/package.json
+++ b/new-log-viewer/package.json
@@ -11,7 +11,7 @@
     "lint:fix": "npm-run-all --sequential --continue-on-error lint:css-fix lint:js-fix",
 
     "lint:css-check": "stylelint src/**/*.css",
-    "lint:css-ci": "npm run lint:css-check -- --no-color",
+    "lint:css-ci": "npm run lint:css-check -- --formatter github",
     "lint:css-fix": "npm run lint:css-check -- --fix",
     "lint:js-check": "eslint src webpack.*.js",
     "lint:js-ci": "npm run lint:js-check -- --output-file eslint-report.json --format json",
