Add names to lint step actions.

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -34,10 +34,10 @@ jobs:
         with:
           node-version: 22
       - run: "npm --prefix new-log-viewer/ clean-install"
-
-      - run: npm --prefix new-log-viewer/ run lint:css-ci
-
-      - run: "npm --prefix new-log-viewer/ run lint:js-ci"
+      - name: "Run CSS lint checker"
+        run: "npm --prefix new-log-viewer/ run lint:css-ci"
+      - name: "Run TypeScript / JavaScript lint checker"
+        run: "npm --prefix new-log-viewer/ run lint:js-ci"
         if: "always()"
       - uses: "ataylorme/eslint-annotate-action@v3"
         if: "always()"
