--- a/new-log-viewer/package.json
+++ b/new-log-viewer/package.json
@@ -22,6 +22,10 @@
   },
   "homepage": "https://github.com/y-scope/yscope-log-viewer#readme",
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.0",
+    "@mui/joy": "^5.0.0-beta.48",
     "axios": "^1.7.2",
     "clp-ffi-js": "^0.1.0",
     "dayjs": "^1.11.11",
