new-log-viewer: Update lint:ci script to fail on warnings.

--- a/new-log-viewer/package.json
+++ b/new-log-viewer/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "lint": "npm run lint:check",
-    "lint:ci": "npm run lint:check -- --output-file eslint-report.json --format json",
+    "lint:ci": "npm run lint:check -- --max-warnings 0",
     "lint:check": "eslint src webpack.*.js",
     "lint:fix": "npm run lint:check -- --fix",
     "start": "webpack serve --open --config webpack.dev.js"
