new-log-viewer: Treat ESLint warnings as errors; Remove `ataylorme/eslint-annotate-action` and instead rely on `setup-node`'s problem matcher to annotate ESLint errors in PRs. (#71)

--- a/new-log-viewer/package.json
+++ b/new-log-viewer/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "lint": "npm run lint:check",
-    "lint:ci": "npm run lint:check -- --output-file eslint-report.json --format json",
-    "lint:check": "eslint src webpack.*.js",
+    "lint:check": "eslint src webpack.*.js --max-warnings 0",
     "lint:fix": "npm run lint:check -- --fix",
     "start": "webpack serve --open --config webpack.dev.js"
   },
