Add ESLint rules to restrict imports from @mui/icons-material and @mui/joy packages.

--- a/new-log-viewer/package.json
+++ b/new-log-viewer/package.json
@@ -74,6 +74,24 @@
           "yscope/typescript"
         ]
       }
-    ]
+    ],
+    "rules": {
+      "no-restricted-imports": [
+        "error", {
+          "paths": [
+            {
+              "message": "Please use path imports and name your imports with postfix \"Icon\" to avoid confusions.",
+              "name": "@mui/icons-material"
+            }
+          ],
+          "patterns": [
+            {
+              "group": ["@mui/joy/*"],
+              "message": "Please use the default import from \"@mui/joy\" instead."
+            }
+          ]
+        }
+      ]
+    }
   }
 }
