Simplify lint scripts - Apply suggestions from code review
Co-authored-by: davemarco <83603688+davemarco@users.noreply.github.com>

--- a/new-log-viewer/package.json
+++ b/new-log-viewer/package.json
@@ -8,14 +8,11 @@
     "start": "webpack serve --open --config webpack.dev.js",
 
     "lint": "npm run lint:check",
-    "lint:check": "npm-run-all --sequential --continue-on-error lint:css-check lint:js-check",
-    "lint:fix": "npm-run-all --sequential --continue-on-error lint:css-fix lint:js-fix",
+    "lint:check": "npm-run-all --sequential --continue-on-error lint:check:**",
+    "lint:fix": "npm-run-all \"lint:check:** -- --fix\"",
 
-    "lint:css-check": "stylelint src/**/*.css",
-    "lint:css-ci": "npm run lint:css-check -- --formatter github",
-    "lint:css-fix": "npm run lint:css-check -- --fix",
-    "lint:js-check": "eslint src webpack.*.js --max-warnings 0",
-    "lint:js-fix": "npm run lint:js-check -- --fix"
+    "lint:check:css": "stylelint src/**/*.css --custom-formatter=stylelint-actions-formatters",
+    "lint:check:js": "eslint src webpack.*.js --max-warnings 0"
   },
   "repository": {
     "type": "git",
