--- a/new-log-viewer/package.json
+++ b/new-log-viewer/package.json
@@ -9,8 +9,9 @@
 
     "lint": "npm run lint:check",
     "lint:check": "npm-run-all --sequential --continue-on-error lint:check:*",
-    "lint:check:css": "stylelint src/**/*.css --formatter github",
+    "lint:check:css": "stylelint src/**/*.css",
     "lint:check:js": "eslint src webpack.*.js --max-warnings 0",
+    "lint:ci": "npm-run-all --sequential --continue-on-error lint:check:js \"lint:check:css -- --formatter github\"",
     "lint:fix": "npm-run-all --parallel --continue-on-error \"lint:check:* -- --fix\""
   },
   "repository": {
