--- a/new-log-viewer/package.json
+++ b/new-log-viewer/package.json
@@ -46,6 +46,7 @@
     "@typescript-eslint/eslint-plugin": "^7.13.0",
     "@typescript-eslint/parser": "^7.13.0",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "eslint-config-yscope": "latest",
     "eslint-import-resolver-typescript": "^3.6.1",
