--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint:check": "npm-run-all --sequential --continue-on-error lint:check:*",
     "lint:check:css": "stylelint src/**/*.css",
     "lint:check:js": "eslint src webpack.*.js --max-warnings 0",
-    "lint:ci": "npm-run-all --sequential --continue-on-error lint:check:js \"lint:check:css -- --formatter github\"",
+    "lint:ci": "npm-run-all --sequential --continue-on-error lint:check:*",
     "lint:fix": "npm-run-all --parallel --continue-on-error \"lint:check:* -- --fix\""
   },
   "repository": {
