--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -32,7 +32,7 @@ jobs:
     runs-on: "ubuntu-latest"
     environment:
       name: "github-pages"
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: "${{steps.deployment.outputs.page_url}}"
     steps:
-      - name: Deploy to GitHub Pages
-        uses: actions/deploy-pages@v4
+      - name: "Deploy to GitHub Pages"
+        uses: "actions/deploy-pages@v4"
