--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -37,4 +37,5 @@ jobs:
       url: "${{steps.deployment.outputs.page_url}}"
     steps:
       - name: "Deploy to GitHub Pages"
+        id: "deployment"
         uses: "actions/deploy-pages@v4"
