--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -11,10 +11,18 @@ jobs:
     steps:
       - uses: "actions/checkout@v4"
 
-      - name: "Set up Node.js"
-        uses: "actions/setup-node@v4"
+      - uses: "actions/setup-node@v4"
         with:
           node-version: "22"
+
+      - id: "get-npm-cache-dir"
+        run: "echo 'dir=$(npm config get cache)' >> ${GITHUB_OUTPUT}"
+      - uses: "actions/cache@v4"
+        with:
+          path: "${{steps.get-npm-cache-dir.outputs.dir}}"
+          key: "${{runner.os}}-node-${{hashFiles('**/package-lock.json')}}"
+          restore-keys: |
+            ${{runner.os}}-node-
 
       - run: "npm install"
       - run: "npm run build"
