--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -15,9 +15,11 @@ jobs:
         with:
           node-version: "22"
 
-      - id: "get-npm-cache-dir"
+      - name: "Get npm cache directory"
+        id: "get-npm-cache-dir"
         run: "echo 'dir=$(npm config get cache)' >> ${GITHUB_OUTPUT}"
-      - uses: "actions/cache@v4"
+      - name: "Restore npm cache"
+        uses: "actions/cache@v4"
         with:
           path: "${{steps.get-npm-cache-dir.outputs.dir}}"
           key: "${{runner.os}}-node-${{hashFiles('**/package-lock.json')}}"
