--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -14,19 +14,10 @@ jobs:
       - uses: "actions/setup-node@v4"
         with:
           node-version: "22"
+          cache: "npm"
+          cache-dependency-path: "./package-lock.json"
 
-      - name: "Get npm cache directory"
-        id: "get-npm-cache-dir"
-        run: "echo 'dir=$(npm config get cache)' >> ${GITHUB_OUTPUT}"
-      - name: "Restore npm cache"
-        uses: "actions/cache@v4"
-        with:
-          path: "${{steps.get-npm-cache-dir.outputs.dir}}"
-          key: "${{runner.os}}-node-${{hashFiles('**/package-lock.json')}}"
-          restore-keys: |
-            ${{runner.os}}-node-
-
-      - run: "npm install "
+      - run: "npm install"
       - run: "npm run build"
 
       - name: "Upload static files as artifact"
