Capitalize first letter in comments - Apply suggestions from code review
Co-authored-by: kirkrodrigues <2454684+kirkrodrigues@users.noreply.github.com>

--- a/.github/workflows/deploy-gh-pages.yml
+++ b/.github/workflows/deploy-gh-pages.yml
@@ -28,7 +28,7 @@ jobs:
   deploy:
     needs: "build"
     permissions:
-      # to deploy to Pages
+      # To deploy to Pages
       pages: "write"
       # to verify the deployment originates from an app
       id-token: "write"
