Remove `actions: "write"` from GITHUB_TOKEN permission list.

--- a/.github/workflows/deploy-gh-pages.yaml
+++ b/.github/workflows/deploy-gh-pages.yaml
@@ -4,9 +4,7 @@ on:
   push:
     branches: ["main"]
 
-permissions:
-  # So the workflow can cancel in-progress jobs
-  actions: "write"
+permissions: {}
 
 concurrency:
   group: "${{github.workflow}}-${{github.ref}}"
