Remove script `lint:ci` and use `lint:check` in GH workflow - Apply suggestions from code review
Co-authored-by: davemarco <83603688+davemarco@users.noreply.github.com>

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -35,7 +35,7 @@ jobs:
         run: |-
           # Disable ANSI color codes in Stylelint default "string" formatter
           export NO_COLOR=1
-          npm run lint:ci
+          npm run lint:check
       - if: "always()"
         name: "Remove Stylelint Problem Matcher"
         run: "echo '::remove-matcher::./.github/problem-matchers/stylelint.json'"
