Extract a constant for the stylelint problem matcher path.

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -21,6 +21,8 @@ concurrency:
 jobs:
   lint-check:
     runs-on: "ubuntu-latest"
+    env:
+      STYLELINT_MATCHER_PATH: "./.github/problem-matchers/stylelint.json"
     steps:
       - uses: "actions/checkout@v4"
         with:
@@ -30,7 +32,7 @@ jobs:
           node-version: 22
       - run: "npm clean-install"
       - name: "Set up Stylelint Problem Matcher"
-        run: "echo '::add-matcher::./.github/problem-matchers/stylelint.json'"
+        run: "echo '::add-matcher::${{env.STYLELINT_MATCHER_PATH}}'"
       - name: "Run `lint:ci` script."
         run: |-
           # Disable ANSI color codes in Stylelint default "string" formatter
@@ -38,4 +40,4 @@ jobs:
           npm run lint:check
       - if: "always()"
         name: "Remove Stylelint Problem Matcher"
-        run: "echo '::remove-matcher::./.github/problem-matchers/stylelint.json owner=stylelint::'"
+        run: "echo '::remove-matcher::${{env.STYLELINT_MATCHER_PATH}}'"
