--- a/docs/tasks.yml
+++ b/docs/tasks.yml
@@ -53,7 +53,7 @@ tasks:
           OUTPUT_FILE: "{{.CHECKSUM_FILE}}"
     sources:
       - "{{.G_BUILD_DIR}}/docs-venv.md5"
-      - "{{.ROOT_DIR}}/Taskfile.yaml"
+      - "{{.ROOT_DIR}}/taskfile.yaml"
       - "{{.TASKFILE}}"
       - "conf/**/*"
       - "src/**/*"
@@ -84,7 +84,7 @@ tasks:
           OUTPUT_FILE: "{{.CHECKSUM_FILE}}"
     sources:
       - "{{.REQUIREMENTS_FILE}}"
-      - "{{.ROOT_DIR}}/Taskfile.yaml"
+      - "{{.ROOT_DIR}}/taskfile.yaml"
       - "{{.TASKFILE}}"
     generates: ["{{.CHECKSUM_FILE}}"]
 
@@ -108,6 +108,6 @@ tasks:
           DATA_DIR: "{{.OUTPUT_DIR}}"
           OUTPUT_FILE: "{{.CHECKSUM_FILE}}"
     sources:
-      - "{{.ROOT_DIR}}/Taskfile.yaml"
+      - "{{.ROOT_DIR}}/taskfile.yaml"
       - "{{.TASKFILE}}"
     generates: ["{{.CHECKSUM_FILE}}"]
