--- a/taskfile.yaml
+++ b/taskfile.yaml
@@ -1,7 +1,7 @@
 version: "3"
 
 includes:
-  docs: "docs/tasks.yml"
+  docs: "docs/tasks.yaml"
   utils: "tools/yscope-dev-utils/taskfiles/utils.yml"
 
 vars:
