--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-import-resolver-typescript": "^3.6.1",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "npm-run-all": "^4.1.5",
@@ -97,12 +98,7 @@
         "files": [
           "test/**/*"
         ],
-        "env": {
-          "jest": true
-        },
-        "rules": {
-          "no-magic-numbers": "off"
-        }
+        "extends": ["yscope/jest"]
       }
     ],
     "rules": {
