--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
+    "error-overlay-webpack-plugin": "^1.1.1",
     "eslint-config-yscope": "latest",
     "eslint-import-resolver-typescript": "^3.6.1",
     "html-webpack-plugin": "^5.6.0",
@@ -59,6 +60,7 @@
     "monaco-editor-webpack-plugin": "^7.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.3.3",
+    "querystring-es3": "^0.2.1",
     "react-refresh": "^0.14.2",
     "style-loader": "^4.0.0",
     "stylelint": "^16.9.0",
