--- a/package.json
+++ b/package.json
@@ -25,54 +25,54 @@
   },
   "homepage": "https://github.com/y-scope/yscope-log-viewer#readme",
   "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.0",
-    "@mui/joy": "^5.0.0-beta.48",
-    "axios": "^1.7.2",
-    "clp-ffi-js": "^0.3.0",
-    "dayjs": "^1.11.11",
-    "monaco-editor": "^0.50.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/joy": "^5.0.0-beta.51",
+    "axios": "^1.7.9",
+    "clp-ffi-js": "^0.3.1",
+    "dayjs": "^1.11.13",
+    "monaco-editor": "0.50.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.5",
-    "@babel/preset-env": "^7.24.7",
-    "@babel/preset-react": "^7.24.7",
-    "@babel/preset-typescript": "^7.24.7",
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.3",
+    "@babel/preset-typescript": "^7.26.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.15",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "@typescript-eslint/parser": "^7.13.0",
-    "babel-loader": "^9.1.3",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
+    "babel-loader": "^9.2.1",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "eslint-config-yscope": "latest",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "html-webpack-plugin": "^5.6.0",
+    "eslint-import-resolver-typescript": "^3.7.0",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
-    "mini-css-extract-plugin": "^2.9.0",
+    "mini-css-extract-plugin": "^2.9.2",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^3.3.3",
-    "react-refresh": "^0.14.2",
+    "prettier": "^3.4.2",
+    "react-refresh": "^0.16.0",
     "style-loader": "^4.0.0",
-    "stylelint": "^16.9.0",
+    "stylelint": "^16.12.0",
     "stylelint-config-clean-order": "^6.1.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-prettier": "^5.0.2",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3",
-    "webpack": "^5.92.0",
+    "typescript": "^5.7.2",
+    "webpack": "^5.97.1",
     "webpack-bundle-analyzer": "^4.10.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4",
-    "webpack-merge": "^5.10.0"
+    "webpack-cli": "^6.0.0",
+    "webpack-dev-server": "^5.2.0",
+    "webpack-merge": "^6.0.1"
   },
   "eslintConfig": {
     "root": true,
