ci: Set "persist-credentials" to false for all GH `actions/checkout`.

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,6 +23,7 @@ jobs:
     steps:
       - uses: "actions/checkout@v4"
         with:
+          persist-credentials: false
           submodules: "recursive"
       - uses: "actions/setup-node@v4"
         with:
