--- a/.github/workflows/deploy-gh-pages.yaml
+++ b/.github/workflows/deploy-gh-pages.yaml
@@ -18,6 +18,7 @@ jobs:
     steps:
       - uses: "actions/checkout@v4"
         with:
+          persist-credentials: false
           submodules: "recursive"
 
       - uses: "actions/setup-node@v4"
