--- a/package.json
+++ b/package.json
@@ -46,16 +46,10 @@
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
-    "@stylistic/eslint-plugin": "^2.12.1",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
-    "eslint-config-yscope": "file:.yalc/eslint-config-yscope",
-    "eslint-import-resolver-typescript": "^3.7.0",
-    "eslint-plugin-import": "^2.31.0",
-    "@typescript-eslint/parser": "^8.18.2",
-    "typescript-eslint": "^8.18.2",
-    "eslint": "^9.17.0",
+    "eslint-config-yscope": "latest",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.0",
