--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "eslint-config-yscope": "latest",
+    "globals": "^15.14.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -71,5 +72,8 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
     "webpack-merge": "^5.10.0"
+  },
+  "overrides": {
+    "typescript-eslint": "8.19.0"
   }
 }
