--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@mui/icons-material": "^6.1.0",
     "@mui/joy": "^5.0.0-beta.48",
     "axios": "^1.7.2",
-    "clp-ffi-js": "^0.3.3",
+    "clp-ffi-js": "^0.3.4",
     "dayjs": "^1.11.11",
     "monaco-editor": "^0.50.0",
     "react": "^18.3.1",
@@ -98,7 +98,9 @@
         "files": [
           "test/**/*"
         ],
-        "extends": ["yscope/jest"]
+        "extends": [
+          "yscope/jest"
+        ]
       }
     ],
     "rules": {
