--- a/package.json
+++ b/package.json
@@ -46,13 +46,11 @@
     "@types/node": "^22.9.0",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
-    "@typescript-eslint/eslint-plugin": "^7.13.0",
-    "@typescript-eslint/parser": "^7.13.0",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "eslint-config-yscope": "latest",
-    "eslint-import-resolver-typescript": "^3.6.1",
+    "globals": "^15.14.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -74,56 +72,5 @@
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4",
     "webpack-merge": "^5.10.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "extends": [
-      "yscope/react"
-    ],
-    "ignorePatterns": [
-      "dist/",
-      "node_modules/"
-    ],
-    "overrides": [
-      {
-        "files": [
-          "*.ts",
-          "*.tsx"
-        ],
-        "extends": [
-          "yscope/typescript"
-        ]
-      },
-      {
-        "files": [
-          "test/**/*"
-        ],
-        "extends": [
-          "yscope/jest"
-        ]
-      }
-    ],
-    "rules": {
-      "no-restricted-imports": [
-        "error",
-        {
-          "paths": [
-            {
-              "message": "Please use path imports and name your imports with postfix \"Icon\" to avoid confusions.",
-              "name": "@mui/icons-material"
-            }
-          ],
-          "patterns": [
-            {
-              "group": [
-                "@mui/joy/*",
-                "!@mui/joy/styles"
-              ],
-              "message": "Please use the default import from \"@mui/joy\" instead."
-            }
-          ]
-        }
-      ]
-    }
   }
 }
