Add jest.config.ts to tsconfig.node.json include list

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -31,5 +31,8 @@
     "strict": true,
     "useUnknownInCatchVariables": true
   },
-  "include": ["vite.config.ts"]
+  "include": [
+    "jest.config.ts",
+    "vite.config.ts"
+  ]
 }
