Disable `noPropertyAccessFromIndexSignature` in tsconfig.

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -30,7 +30,7 @@
     "noImplicitOverride": true,
     "noImplicitReturns": true,
     "noImplicitThis": true,
-    "noPropertyAccessFromIndexSignature": true,
+    "noPropertyAccessFromIndexSignature": false,
     "noUncheckedIndexedAccess": true,
     "noUncheckedSideEffectImports": true,
     "noUnusedLocals": true,
