--- a/package.json
+++ b/package.json
@@ -50,11 +50,12 @@
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "eslint-config-yscope": "latest",
-    "html-webpack-plugin": "^5.6.3",
     "globals": "^15.14.0",
+    "html-webpack-plugin": "^5.6.3",
+    "http-status-codes": "^2.3.0",
     "jest": "^29.7.0",
-    "mini-css-extract-plugin": "^2.9.2",
     "jest-environment-jsdom": "^29.7.0",
+    "mini-css-extract-plugin": "^2.9.2",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.4.2",
