--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "author": "YScope Inc. <dev@yscope.com>",
   "license": "Apache-2.0",
+  "type": "module",
   "bugs": {
     "url": "https://github.com/y-scope/yscope-log-viewer/issues"
   },
