--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/joy": "^5.0.0-beta.51",
     "axios": "^1.7.9",
-    "clp-ffi-js": "^0.3.4",
     "dayjs": "^1.11.13",
     "monaco-editor": "0.50.0",
     "react": "^19.0.0",
@@ -47,14 +46,15 @@
     "@types/react": "^19.0.7",
     "@types/react-dom": "^19.0.3",
     "babel-loader": "^9.2.1",
+    "clp-ffi-js": "file:../clp-ffi-js-fork",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^7.1.2",
     "eslint-config-yscope": "latest",
-    "html-webpack-plugin": "^5.6.3",
     "globals": "^15.14.0",
+    "html-webpack-plugin": "^5.6.3",
     "jest": "^29.7.0",
-    "mini-css-extract-plugin": "^2.9.2",
     "jest-environment-jsdom": "^29.7.0",
+    "mini-css-extract-plugin": "^2.9.2",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.4.2",
